LibPostalNet/libpostal.h

typedef struct libpostal_normalize_options {
    // List of language codes
    char **languages;  
    size_t num_languages;
    uint16_t address_components;

    // String options
    bool latin_ascii;
    bool transliterate;
    bool strip_accents;
    bool decompose;
    bool lowercase;
    bool trim_string;
    bool drop_parentheticals;
    bool replace_numeric_hyphens;
    bool delete_numeric_hyphens;
    bool split_alpha_from_numeric;
    bool replace_word_hyphens;
    bool delete_word_hyphens;
    bool delete_final_periods;
    bool delete_acronym_periods;
    bool drop_english_possessives;
    bool delete_apostrophes;
    bool expand_numex;
    bool roman_numerals;

} libpostal_normalize_options_t;
LIBPOSTAL_DLLEXPORT libpostal_normalize_options_t libpostal_get_default_options(void);
LIBPOSTAL_DLLEXPORT char **libpostal_expand_address(char *input, libpostal_normalize_options_t options, size_t *n);
LIBPOSTAL_DLLEXPORT void libpostal_expansion_array_destroy(char **expansions, size_t n);
/*
Address parser
*/

typedef struct libpostal_address_parser_response {
    size_t num_components;
    char **components;
    char **labels;
} libpostal_address_parser_response_t;
typedef struct libpostal_address_parser_options {
    char *language;
    char *country;
} libpostal_address_parser_options_t;
LIBPOSTAL_DLLEXPORT void libpostal_address_parser_response_destroy(libpostal_address_parser_response_t *self);
LIBPOSTAL_DLLEXPORT libpostal_address_parser_options_t libpostal_get_address_parser_default_options(void);
LIBPOSTAL_DLLEXPORT libpostal_address_parser_response_t *libpostal_parse_address(char *address, libpostal_address_parser_options_t options);
// Setup/teardown methods

LIBPOSTAL_DLLEXPORT bool libpostal_setup(void);
LIBPOSTAL_DLLEXPORT bool libpostal_setup_datadir(char *datadir);
LIBPOSTAL_DLLEXPORT void libpostal_teardown(void);
LIBPOSTAL_DLLEXPORT bool libpostal_setup_parser(void);
LIBPOSTAL_DLLEXPORT bool libpostal_setup_parser_datadir(char *datadir);
LIBPOSTAL_DLLEXPORT void libpostal_teardown_parser(void);
LIBPOSTAL_DLLEXPORT bool libpostal_setup_language_classifier(void);
LIBPOSTAL_DLLEXPORT bool libpostal_setup_language_classifier_datadir(char *datadir);
LIBPOSTAL_DLLEXPORT void libpostal_teardown_language_classifier(void);