LibPostalNet/libpostal.cs


        public LibpostalAddressParserOptions(global::LibPostalNet.LibpostalAddressParserOptions _0)
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::LibPostalNet.LibpostalAddressParserOptions.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
            *((global::LibPostalNet.LibpostalAddressParserOptions.__Internal*)__Instance) = *((global::LibPostalNet.LibpostalAddressParserOptions.__Internal*)_0.__Instance);
        }

        ~LibpostalAddressParserOptions()
        {
            Dispose(false);
        }

        public void Dispose()
        {
            Dispose(disposing: true);
            GC.SuppressFinalize(this);
        }

        public virtual void Dispose(bool disposing)
        {
            if (__Instance == IntPtr.Zero)
                return;
            global::LibPostalNet.LibpostalAddressParserOptions __dummy;
            NativeToManagedMap.TryRemove(__Instance, out __dummy);
            if (__ownsNativeInstance)
                Marshal.FreeHGlobal(__Instance);
            __Instance = IntPtr.Zero;
        }

        public string Language
        {
            get
            {
                return Marshal.PtrToStringAnsi(((global::LibPostalNet.LibpostalAddressParserOptions.__Internal*)__Instance)->language);
            }

            set
            {
                ((global::LibPostalNet.LibpostalAddressParserOptions.__Internal*)__Instance)->language = Marshal.StringToHGlobalAnsi(value);
            }
        }

        public string Country
        {
            get
            {
                return Marshal.PtrToStringAnsi(((global::LibPostalNet.LibpostalAddressParserOptions.__Internal*)__Instance)->country);
            }

            set
            {
                ((global::LibPostalNet.LibpostalAddressParserOptions.__Internal*)__Instance)->country = Marshal.StringToHGlobalAnsi(value);
            }
        }
    }

    public unsafe partial class libpostal
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_get_default_options")]
            internal static extern void LibpostalGetDefaultOptions(global::System.IntPtr @return);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_expand_address")]
            internal static extern sbyte** LibpostalExpandAddress([MarshalAs(UnmanagedType.LPUTF8Str)] string input, global::LibPostalNet.LibpostalNormalizeOptions.__Internal options, ulong* n);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_expansion_array_destroy")]
            internal static extern void LibpostalExpansionArrayDestroy(sbyte** expansions, ulong n);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_address_parser_response_destroy")]
            internal static extern void LibpostalAddressParserResponseDestroy(global::System.IntPtr self);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_get_address_parser_default_options")]
            internal static extern void LibpostalGetAddressParserDefaultOptions(global::System.IntPtr @return);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_parse_address")]
            internal static extern global::System.IntPtr LibpostalParseAddress([MarshalAs(UnmanagedType.LPUTF8Str)] string address, global::LibPostalNet.LibpostalAddressParserOptions.__Internal options);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_setup")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool LibpostalSetup();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_setup_datadir")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool LibpostalSetupDatadir([MarshalAs(UnmanagedType.LPUTF8Str)] string datadir);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_teardown")]
            internal static extern void LibpostalTeardown();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_setup_parser")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool LibpostalSetupParser();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_setup_parser_datadir")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool LibpostalSetupParserDatadir([MarshalAs(UnmanagedType.LPUTF8Str)] string datadir);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_teardown_parser")]
            internal static extern void LibpostalTeardownParser();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_setup_language_classifier")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool LibpostalSetupLanguageClassifier();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_setup_language_classifier_datadir")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool LibpostalSetupLanguageClassifierDatadir([MarshalAs(UnmanagedType.LPUTF8Str)] string datadir);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("postal", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint = "libpostal_teardown_language_classifier")]
            internal static extern void LibpostalTeardownLanguageClassifier();
        }

        public static global::LibPostalNet.LibpostalNormalizeOptions LibpostalGetDefaultOptions()
        {
            var __ret = new global::LibPostalNet.LibpostalNormalizeOptions.__Internal();
            __Internal.LibpostalGetDefaultOptions(new IntPtr(&__ret));
            return global::LibPostalNet.LibpostalNormalizeOptions.__CreateInstance(__ret);
        }

        public static global::LibPostalNet.LibpostalNormalizeResponse LibpostalExpandAddress(string input, global::LibPostalNet.LibpostalNormalizeOptions options)
        {
            var __arg1 = ReferenceEquals(options, null) ? new global::LibPostalNet.LibpostalNormalizeOptions.__Internal() : *(global::LibPostalNet.LibpostalNormalizeOptions.__Internal*)options.__Instance;
            var __arg2 = new ulong();
            var __ret = __Internal.LibpostalExpandAddress(input, __arg1, &__arg2);
            global::LibPostalNet.LibpostalNormalizeResponse __result0;
            if (__arg2 == (ulong)0) __result0 = null;
            __result0 = global::LibPostalNet.LibpostalNormalizeResponse.__CreateInstance(__ret, __arg2);
            return __result0;
            
        }

        public static void LibpostalExpansionArrayDestroy(sbyte** expansions, ulong n)
        {
            __Internal.LibpostalExpansionArrayDestroy(expansions, n);
        }

        public static void LibpostalAddressParserResponseDestroy(global::LibPostalNet.LibpostalAddressParserResponse self)
        {
            var __arg0 = ReferenceEquals(self, null) ? global::System.IntPtr.Zero : self.__Instance;
            __Internal.LibpostalAddressParserResponseDestroy(__arg0);
        }

        public static global::LibPostalNet.LibpostalAddressParserOptions LibpostalGetAddressParserDefaultOptions()
        {
            var __ret = new global::LibPostalNet.LibpostalAddressParserOptions.__Internal();
            __Internal.LibpostalGetAddressParserDefaultOptions(new IntPtr(&__ret));
            return global::LibPostalNet.LibpostalAddressParserOptions.__CreateInstance(__ret);
        }

        public static global::LibPostalNet.LibpostalAddressParserResponse LibpostalParseAddress(string address, global::LibPostalNet.LibpostalAddressParserOptions options)
        {
            var __arg1 = ReferenceEquals(options, null) ? new global::LibPostalNet.LibpostalAddressParserOptions.__Internal() : *(global::LibPostalNet.LibpostalAddressParserOptions.__Internal*)options.__Instance;
            var __ret = __Internal.LibpostalParseAddress(address, __arg1);
            global::LibPostalNet.LibpostalAddressParserResponse __result0;
            if (__ret == IntPtr.Zero) __result0 = null;
            else if (global::LibPostalNet.LibpostalAddressParserResponse.NativeToManagedMap.ContainsKey(__ret))
                __result0 = (global::LibPostalNet.LibpostalAddressParserResponse)global::LibPostalNet.LibpostalAddressParserResponse.NativeToManagedMap[__ret];
            else __result0 = global::LibPostalNet.LibpostalAddressParserResponse.__CreateInstance(__ret);
            return __result0;
        }

        public static bool LibpostalSetup()
        {
            var __ret = __Internal.LibpostalSetup();
            return __ret;
        }

        public static bool LibpostalSetupDatadir(string datadir)
        {
            var __ret = __Internal.LibpostalSetupDatadir(datadir);
            return __ret;
        }

        public static void LibpostalTeardown()
        {
            __Internal.LibpostalTeardown();
        }

        public static bool LibpostalSetupParser()
        {
            var __ret = __Internal.LibpostalSetupParser();
            return __ret;
        }

        public static bool LibpostalSetupParserDatadir(string datadir)
        {
            var __ret = __Internal.LibpostalSetupParserDatadir(datadir);
            return __ret;
        }

        public static void LibpostalTeardownParser()
        {
            __Internal.LibpostalTeardownParser();
        }

        public static bool LibpostalSetupLanguageClassifier()
        {
            var __ret = __Internal.LibpostalSetupLanguageClassifier();
            return __ret;
        }

        public static bool LibpostalSetupLanguageClassifierDatadir(string datadir)
        {
            var __ret = __Internal.LibpostalSetupLanguageClassifierDatadir(datadir);
            return __ret;
        }

        public static void LibpostalTeardownLanguageClassifier()
        {
            __Internal.LibpostalTeardownLanguageClassifier();
        }
    }
}
